k8s/blue-deploy.yaml
# k8s/blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-blue
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
      color: blue
  template:
    metadata:
      labels:
        app: demo
        color: blue
    spec:
      containers:
      - name: app
        image: ghcr.io/YOUR_USERNAME/demo-app:v1
        ports:
        - containerPort: 3000
